refresh token issue resolved, message align fixed

--- a/src/components/MessageForm.css
+++ b/src/components/MessageForm.css
@@ -83,35 +83,52 @@
 
 
 .message-inner {
+    /*Background*/
+    background-color: #d1e7dd;
+
+    /*Border*/
     border: 2px solid white;
-    margin-left: 20px;
-    margin-bottom: 10px;
-    padding: 7px;
-    min-width: 250px;
-    max-width: 90%;
-    text-align: left;
-    min-height: 80px;
-    font: 400 1em, sans-serif;
-    display: inline-block;
     border-radius: 20px;
     border-style: solid;
-    border-top-left-radius: 0%;
-    background-color: #d1e7dd;
+    border-top-right-radius: 0;
+
+    /*Margin*/
+    margin-inline: 20px;
+    margin-bottom: 10px;
+
+    /*Size*/
+    padding: 7px;
+    min-width: 250px;
+    max-width: 400px;
+    min-height: auto;
+    max-height: 400px;
+    display: inline-block;
+
+    /*Text*/
+    font: 400 1em, sans-serif;
+    text-align: left;
+    word-wrap: break-word;
+
+    /*Animation*/
     animation-duration: 0.5s;
     animation-name: bounce;
 }
 
 .incoming-message .message-inner {
-    border-radius: 20px;
-    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 20px;
     border-style: solid;
     background-color: #ffdab9;
 }
 
 .incoming-message {
     display: flex;
+    justify-content: flex-start;
+}
+
+.message {
+    display: flex;
     justify-content: flex-end;
-    margin-right: 20px;
 }
 
 .message-timestamp-left {
